[tool.poetry]
name = "ap-users-api"
version = "0.1.0"
description = ""
authors = ["Sam McCaffrey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
pydantic = "^2.9.2"
uvicorn = "^0.31.1"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
alembic = "^1.13.3"
starlette = "^0.39.2"
sqlalchemy-mixins = "^2.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
